# RayTracing

./: .gitignore  CMakeLists.txt  README.md  upserver.sh  基于Bezier曲线的三维造型与渲染_2015011313徐鉴劲.docx
scenes/: config.json  glass.json  scene1.json  scene2.json
scenes/ball_pyramid/: ball_pyramid.json
scenes/bowlings/: bowling.json  bowlings.json
scenes/desktop_objects/: bowl.json  chopsticks.json  config(复件).json  config.json  desktop_objects.json  ellipsoid1.json  ellipsoid2.json  plate.json  vase.json
scenes/final/: bowl.json  eclipse1.json  eclipse2.json  fills.json  final.json  glass.json  plate.json  vase.json
src/: CMakeLists.txt  pCMakeLists.txt  toserver.sh
src/common/: collision.cpp  collision.h  common.cpp  common.h  config.cpp  config.h  const.h  intersection.cpp  intersection.h  photon.h  vector2.cpp  vector2.h
src/engine/: CMakeLists.txt  engine.cpp  engine.h  photonmapper.h  raytracer.cpp  raytracer.h
src/engine/photonmap/: photonmapper.cpp  photonmapper.h  photontracer.cpp  photontracer.h  statmap.cpp  statmap.h
src/engine/photonmapper/: photonmap.cpp  photonmap.h  photonmapper.cpp  photonmapper.h  photontracer.cpp  photontracer.h
src/engine/ppm/: hitpointmap.cpp  hitpointmap.h  ppm.cpp  ppm.h
src/engine/ppm/q/: hitpointmap.cpp  hitpointmap.h  ppm.cpp  ppm.h
src/engine/raytrace/: raytracer.cpp  raytracer.h
src/engine/raytracer/: raytracer.cpp  raytracer.h
src/env/: CMakeLists.txt  camera.cpp  camera.h  scene.cpp  scene.h
src/light/: CMakeLists.txt  light.cpp  light.h  pointlight.cpp  pointlight.h  rectlight.cpp  rectlight.h
src/math/: CMakeLists.txt  beziercurve.cpp  beziercurve.h  beziercurve3.cpp  beziercurve3.h  polynomial.cpp  polynomial.h  polynomial6.cpp  polynomial6.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h
src/object/: CMakeLists.txt  cylinder.cpp  cylinder.h  geometry.cpp  geometry.h  material.cpp  material.h  object.cpp  object.h  plane.cpp  plane.h  rotationbody.cpp  rotationbody.h  sphere.cpp  sphere.h
src/scene/: scene.cpp  scene.h
src/scenes/: config.json  m.json
src/tools/: CMakeLists.txt  genscene.cpp  main.cpp  mesh.cpp  render.cpp  test.cpp
src/utils/: CMakeLists.txt  bmp.cpp  bmp.h  config.cpp  config.h
tools/: CMakeLists.txt
